<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Clean extras</string>
    
    <!-- Setting categories -->
    <string name="system_category">System</string>
    <string name="user_interface_category">User interface</string>
    <string name="power_menu_category">Power menu</string>
    
    <!-- Setting checkbox title for root access -->
    <string name="root_access">Root access</string>
    <string name="root_access_warning_title">Allow root access?</string>
    <string name="root_access_warning_message">Allowing applications to request root access is very 
dangerous and could compromise the security of your system!</string>
    <string name="root_access_none">Disabled</string>
    <string name="root_access_apps">Apps only</string>
    <string name="root_access_adb">ADB only</string>
    <string name="root_access_all">Apps and ADB</string>
    <string name="root_access_summary_none">Access is currently disabled</string>
    <string name="root_access_summary_apps">Access is enabled for apps only</string>
    <string name="root_access_summary_adb">Access is enabled for ADB only</string>
    <string name="root_access_summary_all">Access is enabled for Apps and ADB</string>

    <!-- Setting checkbox title for reboot option -->
    <string name="reboot_option">Reboot option</string>
    <string name="reboot_option_none">Disabled</string>
    <string name="reboot_option_button">Button</string>
    <string name="reboot_option_menu">Menu</string>
    <string name="reboot_option_summary_none">Removed from the Power menu</string>
    <string name="reboot_option_summary_button">Option in the Power menu</string>
    <string name="reboot_option_summary_menu">Advanced menu in the Power menu</string>

    <!-- Setting checkbox title for screenshot option -->
    <string name="screenshot_option">Screenshot option</string>
    <string name="screenshot_option_summary_unchecked">Removed from the Power menu</string>
    <string name="screenshot_option_summary_checked">Option in the Power menu</string>
    
    <!-- Setting checkbox title for airplane mode option -->
    <string name="airplane_mode_option">Airplane mode option</string>
    <string name="airplane_mode_option_summary_unchecked">Removed from the Power menu</string>
    <string name="airplane_mode_option_summary_checked">Option in the Power menu</string>
    
    <!-- Setting checkbox title for silent mode option -->
    <string name="silent_mode_option">Silent mode option</string>
    <string name="silent_mode_option_summary_unchecked">Removed from the Power menu</string>
    <string name="silent_mode_option_summary_checked">Option in the Power menu</string>
    
    <!--  Setting checkbox title for status bar battery -->
    <string name="status_bar_battery">Battery percentage</string>
    <string name="status_bar_battery_summary_unchecked">Removed from the Status bar</string>
    <string name="status_bar_battery_summary_checked">Visible in the Status bar</string>
    
    <!--  Setting checkbox title for the number of home screens -->
    <string name="launcher_screen_count">Number of home screens</string>
    <string name="launcher_screen_count_summary_1">Showing 1 home screen</string>
    <string name="launcher_screen_count_summary_2">Showing 2 home screens</string>
    <string name="launcher_screen_count_summary_3">Showing 3 home screens</string>
    <string name="launcher_screen_count_summary_4">Showing 4 home screens</string>
    <string name="launcher_screen_count_summary_5">Showing 5 home screens</string>
    <string name="launcher_screen_count_summary_6">Showing 6 home screens</string>
    <string name="launcher_screen_count_summary_7">Showing 7 home screens</string>
    <string name="launcher_screen_count_summary_8">Showing 8 home screens</string>
    <string name="launcher_screen_count_summary_9">Showing 9 home screens</string>
    <string name="launcher_screen_count_warning_message">In order to update your Launcher screens, Launcher2 must be restarted.</string>
    <string name="launcher_screen_count_warning_title">Update Launcher Screens?</string>

</resources>
