<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="system_category"
        android:title="@string/system_category">
        
	    <ListPreference
	        android:key="root_access"
	        android:title="@string/root_access"
	        android:persistent="false"
	        android:entries="@array/root_access_entries"
	        android:entryValues="@array/root_access_values" />
    
    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="user_interface_category"
        android:title="@string/user_interface_category">
	    
	    <CheckBoxPreference
	        android:key="status_bar_battery"
	        android:title="@string/status_bar_battery"
	        android:persistent="false" />
	
	    <ListPreference
	        android:key="launcher_screen_count"
	        android:title="@string/launcher_screen_count"
	        android:persistent="false"
	        android:entries="@array/launcher_screen_count_entries"
	        android:entryValues="@array/launcher_screen_count_entries" />
    
    </PreferenceCategory>

    <PreferenceCategory
        android:key="power_menu_category"
        android:title="@string/power_menu_category">
    
	    <ListPreference
	        android:key="reboot_option"
	        android:title="@string/reboot_option"
	        android:persistent="false"
	        android:entries="@array/reboot_option_entries"
	        android:entryValues="@array/reboot_option_values" />
	
	    <CheckBoxPreference
	        android:key="screenshot_option"
	        android:title="@string/screenshot_option"
	        android:persistent="false" />
	    
	    <CheckBoxPreference
	        android:key="airplane_mode_option"
	        android:title="@string/airplane_mode_option"
	        android:persistent="false" />
    
    </PreferenceCategory>
    
</PreferenceScreen>
